# rt

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
src/: camera.rs  canvas.rs  color.rs  computations.rs  floats.rs  intersection.rs  interval.rs  lib.rs  lighting.rs  main.rs  material.rs  math.rs  matrix.rs  point_light.rs  ray.rs  transform.rs  transformations.rs  tuple.rs  vec3.rs  view_transform.rs  world.rs
src/lighting/: mod.rs  point_light.rs
src/math/: matrix.rs  mod.rs  transform.rs  tuple.rs
src/objects/: mod.rs  plane.rs  sphere.rs
src/patterns/: checker.rs  gradient.rs  mod.rs  ring.rs  solid.rs  stripe.rs  stripe_pattern.rs
