[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
minifb = "0.28"
rand = "0.10"

# [lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# nursery
suboptimal_flops = "allow"

# pedantic
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# restriction
alloc_instead_of_core = "allow"
as_conversions = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
default_numeric_fallback = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
print_stdout = "allow"
precedence_bits = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
